# simplifia-installer

./: README.md  pyproject.toml
.github/workflows/: build-release.yml  docker-publish.yml  test-install.yml
assets/clawdbot/: docker-compose.yml  env.example
docker/: Dockerfile  entrypoint.sh
packaging/: install.ps1  install.sh
simplifia/: __init__.py  __main__.py  api.py  auth.py  clawdbot.py  cli.py  doctor.py  install.py  license.py  logs.py  openclawd.py  output.py  registry.py  setup.py  state.py  test.py  uninstall.py  update.py
simplifia/assets/clawdbot/: docker-compose.yml  env.example
test/: test-clean-install.sh
